<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="16dp"
    tools:ignore="UseAppTint">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_back"
            android:tint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseAppTint" />

        <ImageView
            android:id="@+id/imgVisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_visible"
            android:tint="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/imgShare"
            app:layout_constraintTop_toTopOf="@+id/imgBack" />

        <ImageView
            android:id="@+id/imgShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_share"
            android:tint="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/imgFavourite"
            app:layout_constraintTop_toTopOf="@+id/imgVisible"
            tools:ignore="UseAppTint" />

        <ImageView
            android:id="@+id/imgFavourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favourite_fill"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgShare"
            tools:ignore="UseAppTint" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseAppTint">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textVacancyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:fontFamily="@font/semibold"
                android:text="@string/text_vacancy_name_label"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textSalary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/regular"
                android:text="@string/text_salary_label"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/textVacancyName" />

            <TextView
                android:id="@+id/textExp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/regular"
                android:text="@string/text_exp_label"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/textSalary" />

            <TextView
                android:id="@+id/textEmployment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:text="@string/text_employment_label"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/textExp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/blocks"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textEmployment">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@drawable/background_card"
                    android:backgroundTint="@color/green_dark"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_default="spread"
                    tools:layout_editor_absoluteX="17dp">

                    <TextView
                        android:id="@+id/textPeopleResponse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/regular"
                        android:text="@string/text_people_response_label"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/imgPeopleResponse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_person_green" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/background_card"
                    android:backgroundTint="@color/green_dark"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/linearLayout"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_default="spread">

                    <TextView
                        android:id="@+id/textPeopleLook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/regular"
                        android:text="@string/text_people_look_label"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/imgPeopleLook"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_visible_green" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardMap"
                android:layout_width="match_parent"
                android:layout_height="134dp"
                android:layout_marginTop="24dp"
                app:cardBackgroundColor="@color/gray_one"
                app:cardCornerRadius="12dp"
                app:layout_constrainedHeight="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blocks">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textCompanyName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/medium"
                        android:text="@string/tv_company_name_label"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageChecked"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_done"
                        app:layout_constraintBottom_toBottomOf="@+id/textCompanyName"
                        app:layout_constraintStart_toEndOf="@+id/textCompanyName"
                        app:layout_constraintTop_toTopOf="@+id/textCompanyName" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView"
                        android:layout_width="0dp"
                        android:layout_height="58dp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="8dp"
                        app:cardCornerRadius="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textCompanyName">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="fitXY"
                            android:src="@drawable/map" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/regular"
                        android:text="@string/tv_adress_label"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="@+id/cardView"
                        app:layout_constraintTop_toBottomOf="@+id/cardView" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textCompanyDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/regular"
                android:text="@string/tv_description_label"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardMap" />

            <TextView
                android:id="@+id/textYourTaskTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/semibold"
                android:text="@string/tv_tasks_label"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textCompanyDescription" />

            <TextView
                android:id="@+id/textYourTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/regular"
                android:text="@string/tv_tasks_content_label"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textYourTaskTitle" />

            <TextView
                android:id="@+id/ask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/medium"
                android:text="@string/tv_ask_label"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textYourTask" />

            <TextView
                android:id="@+id/textAskDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/medium"
                android:text="@string/tv_ask_description_label"
                android:textColor="@color/gray_light"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ask" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/questions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textAskDescription"
                tools:itemCount="4"
                tools:listitem="@layout/item_question" />

            <Button
                android:id="@+id/buttonResponse"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_button_blue_selector"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/semibold"
                android:text="@string/btn_response_label"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/questions" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>